--- a/src/css/styles/resets.css
+++ b/src/css/styles/resets.css
@@ -3,8 +3,6 @@
     padding: 0 0;
     box-sizing: border-box;
 }
-div{
-    border: 1px solid black;
-    padding: 10px;
-    margin: 5px;
+:focus{
+    outline: none;
 }
