--- a/src/css/utils/root.scss
+++ b/src/css/utils/root.scss
@@ -1,4 +1,4 @@
-/*colors*/
+//colors
 $co-bg: #FFFFFF;
 $co-font: #222222;
 $co-akzent-dark: #003FD7;
@@ -7,15 +7,28 @@ $co-akzent-light: #E58BEB;
 $co-akzent-light-50: #EFC5F2;
 $co-pos: #BBD842;
 $co-neg: #F04F68;
-/*specialfonts*/
-$f-logo: 900 8rem/160% acumin-pro-wide, sans-serif;
-$f-front-subline: 500 2.1rem/140% acumin-pro-wide, sans-serif;
-/*headlines*/
-$f-headline-m: 700 2.1rem/140% acumin-pro-wide, sans-serif;
-$f-headline-s: 700 1.7rem/140% acumin-pro-wide, sans-serif;
-/*text*/
-$f-text-m: 400 1.25rem/120% acumin-pro-wide, sans-serif;
-$f-text-s: 400 1.1rem/120% acumin-pro-wide, sans-serif;
-/*auszeichnungen*/
-$f-code-m: 400 1.25rem/120% antarctican-mono, sans-serif;
-$f-code-s: 400 1.00rem/120% antarctican-mono, sans-serif;
+
+//specialfonts
+$f-logo-l: 900 8rem/100% acumin-pro-wide, sans-serif;
+$f-logo-s: 900 3rem/100% acumin-pro-wide, sans-serif;
+$f-front-subline: 500 1.8rem/140% acumin-pro-wide, sans-serif;
+//headlines
+$f-headline-m: 700 2rem/140% acumin-pro-wide, sans-serif;
+$f-headline-s: 700 1.6rem/140% acumin-pro-wide, sans-serif;
+//text
+$f-text-m: 400 1.2rem/120% acumin-pro-wide, sans-serif;
+$f-text-s: 400 1.0rem/120% acumin-pro-wide, sans-serif;
+//auszeichnungen
+$f-code-m: 400 1.1rem/120% antarctican-mono, sans-serif;
+$f-code-s: 400 0.95rem/120% antarctican-mono, sans-serif;
+
+//gaps
+$ga-around: 40px;
+$ga-inner: 25px;
+$ga-top-s: 50px;
+$ga-top-l: 70px;
+
+//Iconsizes
+$ic-s: 20px;
+$ic-m: 30px;
+$ic-l: 40px;
