added most styling

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,6 +4,7 @@
 @import "utils/resets";
 @import "utils/mixins";
 /*Styles*/
-@import "styles/dev";
+//@import "styles/dev";
 @import "styles/fonts";
 @import "styles/body";
+@import "styles/content";
