badge for solved chapters

--- a/src/css/utils/root.scss
+++ b/src/css/utils/root.scss
@@ -41,3 +41,5 @@ $btn-big: 30px 50px;
 $btn-big-radius: 50px;
 $btn-basic: 15px;
 $btn-basic-radius: 500px;
+$btn-small: 5px 15px;
+$btn-small-radius: 100px;
