basic styling in-browser-editor

--- a/src/css/utils/resets.scss
+++ b/src/css/utils/resets.scss
@@ -6,3 +6,16 @@
 :focus{
     outline: none;
 }
+//editor presets
+span.log-number{
+    //color: #c9baf3;
+    color: #b48ead;
+}
+span.log-string{
+    //color: #9df187;
+    color: #a3be8c;
+}
+span.log-boolean{
+    //color: #a9cbff;
+    color: #5e81ac;
+}
