--- a/src/css/utils/root.scss
+++ b/src/css/utils/root.scss
@@ -1,12 +1,16 @@
 //colors
 $co-bg: #FFFFFF;
 $co-font: #222222;
-$co-akzent-dark: #003FD7;
-$co-akzent-dark-50: #003FD780;
-$co-akzent-light: #E58BEB;
-$co-akzent-light-50: #EFC5F2;
+$co-neutral: #003FD7;
+$co-akzent: #FFFF00;
 $co-pos: #BBD842;
 $co-neg: #F04F68;
+
+$co-akzent-dark: #003FD7; //to be deleted
+$co-akzent-dark-50: #003FD780; //to be deleted
+$co-akzent-light: #E58BEB; //to be deleted
+$co-akzent-light-50: #EFC5F2; //to be deleted
+
 
 //specialfonts
 $f-logo-l: 900 8rem/100% acumin-pro-wide, sans-serif;
@@ -23,20 +27,19 @@ $f-code-m: 400 1.1rem/120% antarctican-mono, sans-serif;
 $f-code-s: 400 0.95rem/120% antarctican-mono, sans-serif;
 
 //gaps
-$ga-around: 40px;
+$ga-around: 35px;
 $ga-inner: 25px;
 $ga-top-s: 50px;
 $ga-top-l: 70px;
 
 //Iconsizes
 $ic-s: 20px;
-$ic-m: 30px;
-$ic-l: 40px;
+$ic-m: 50px;
 
 //Borders
 $bo-standard: 1px solid $co-font;
 
-//Buttons
+//Buttons - to be deleted
 $btn-big: 30px 50px;
 $btn-big-radius: 50px;
 $btn-basic: 15px;
