--- a/src/css/utils/root.scss
+++ b/src/css/utils/root.scss
@@ -17,6 +17,7 @@ $f-headline-s: 700 1.6rem/120% acumin-pro-wide, sans-serif;
 $f-text-m: 400 1.2rem/120% acumin-pro-wide, sans-serif;
 $f-text-s: 400 1rem/120% acumin-pro-wide, sans-serif;
 //auszeichnungen
+$f-code-l: 400 1.3rem/120% antarctican-mono, sans-serif;
 $f-code-m: 400 1.1rem/120% antarctican-mono, sans-serif;
 $f-code-s: 400 0.95rem/120% antarctican-mono, sans-serif;
 
