--- a/src/css/utils/root.scss
+++ b/src/css/utils/root.scss
@@ -2,8 +2,7 @@
 $co-bg: #FFFFFF;
 $co-font: #222222;
 $co-neutral: #003FD7;
-$co-akzent: #FFFF00;
-//$co-pos: #BBD842;
+$co-akzent: #ffe600;
 $co-pos: #60b41a;
 $co-neg: #F04F68;
 
