--- a/src/css/styles/buttons.scss
+++ b/src/css/styles/buttons.scss
@@ -1,10 +1,26 @@
 //basic button
 button.btn,
 div.btn{
+  cursor: pointer;
   p{
     line-height: 100%;
   }
   background-color: $co-bg;
   padding: 10px 16px 13px 16px;
   border: $bo-standard;
+}
+div.btn-dbl{
+  cursor: pointer;
+  p{
+    line-height: 100%;
+  }
+  background-color: $co-bg;
+  @include flex(row,center,center);
+  &>p{
+    padding: 10px 16px 13px 16px;
+    border: $bo-standard;
+  }
+  &>img{
+    @include btnicon(0,10px,4px)
+  }
 }
