--- a/src/css/utils/resets.scss
+++ b/src/css/utils/resets.scss
@@ -2,6 +2,11 @@
 html{
     scroll-behavior: smooth;
 }
+div#app{
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 80px ;
+}
 *{
     margin: 0 0;
     padding: 0 0;
