some micro-animations

--- a/src/css/styles/buttons.scss
+++ b/src/css/styles/buttons.scss
@@ -1,6 +1,7 @@
 //basic button
 button.btn,
 div.btn{
+  @include shadow();
   cursor: pointer;
   p{
     line-height: 100%;
@@ -21,6 +22,8 @@ div.btn-dbl{
     padding: 10px 16px 13px 16px;
     border: $bo-standard;
   }
+  @include shadow();
+
 }
 //badges
 div.badge {
