--- a/src/css/utils/root.scss
+++ b/src/css/utils/root.scss
@@ -1,6 +1,6 @@
 //colors
 $co-bg: #FFFFFF;
-$co-font: #222222;
+$co-font: rgba(34, 34, 34, 0.5);
 $co-neutral: #003FD7;
 $co-akzent: #ffe600;
 $co-pos: #60b41a;
@@ -14,8 +14,8 @@ $f-front-subline: 500 2rem/110% acumin-pro-wide, sans-serif;
 $f-headline-m: 700 2rem/120% acumin-pro-wide, sans-serif;
 $f-headline-s: 700 1.6rem/120% acumin-pro-wide, sans-serif;
 //text
-$f-text-m: 400 1.2rem/120% acumin-pro-wide, sans-serif;
-$f-text-s: 400 1rem/120% acumin-pro-wide, sans-serif;
+$f-text-m: 400 1.2rem/130% acumin-pro-wide, sans-serif;
+$f-text-s: 400 1rem/130% acumin-pro-wide, sans-serif;
 //auszeichnungen
 $f-code-l: 400 1.3rem/120% antarctican-mono, sans-serif;
 $f-code-m: 400 1.1rem/120% antarctican-mono, sans-serif;
