--- a/src/css/utils/mixins.scss
+++ b/src/css/utils/mixins.scss
@@ -137,3 +137,10 @@ $breakpoint-large-desktop: 88em;
     @content
   }
 }
+@mixin basic_underline() {
+  border-bottom: $bo-standard;
+  padding-top: 2px;
+  @include basic_hover{
+    border-bottom: 1px solid rgba(34, 34, 34, 0.13);
+  }
+}
