--- a/src/css/utils/root.scss
+++ b/src/css/utils/root.scss
@@ -1,6 +1,6 @@
 //colors
 $co-bg: #FFFFFF;
-$co-font: rgba(34, 34, 34, 0.5);
+$co-font: #222222;
 $co-neutral: #003FD7;
 $co-akzent: #ffe600;
 $co-pos: #60b41a;
