locked application for small screen devices

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 @import "utils/root";
 @import "utils/resets";
 @import "utils/mixins";
+@import "utils/sizeblock";
 /*Styles*/
 @import "styles/fonts";
 @import "styles/body";
